fix: Proper dsiplay of carousel - Set carousel container height to 550px - Center image within carousel - Image now no longer gets cropped - Image perserves aspect ratio.

--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -82,3 +82,18 @@ a.box:focus {
 .no-data p {
   margin-top: 0.5em;
 }
+
+/*
+    Carousel styling.
+*/
+
+.el-carousel__container {
+  height: 550px!important;
+}
+
+.el-carousel__item img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
+}
